--- a/views/user_page.erb
+++ b/views/user_page.erb
@@ -1,4 +1,4 @@
-<h3><%= @name.capitalize %></h3>
+<h3><%= @name.to_s.capitalize %></h3>
 <p><em><%= @email %></em></p>
 <h4>Interests:</h4>
 <%= list_interests(@interests) %>
